Continue switching to LinkedList where appropriate